Fixed development mode so recipe would work properly when the development environment was specified.

--- a/templates/default/pophealth-sites-available.conf.erb
+++ b/templates/default/pophealth-sites-available.conf.erb
@@ -6,6 +6,7 @@
 
 <VirtualHost *:80>
    DocumentRoot <%= @pophealth_root %>
+   RailsEnv <%= @pophealth_env %>
    <Directory <%= @pophealth_root %>>
       AllowOverride all
       Options -MultiViews
