Update delayed worker to be multithreaded.

--- a/templates/default/delayed_worker.conf.erb
+++ b/templates/default/delayed_worker.conf.erb
@@ -2,5 +2,9 @@ start on started mongodb
 stop on stopping mongodb
 
 script
-exec sudo -u <%= @username %> <%= @user_path %>/start_delayed_job.sh >> /tmp/delayed_worker.log 2>&1
+exec sudo -u <%= @username %> <%= @user_path %>/delayed_job.sh start
+end script
+
+post-stop script
+exec sudo -u <%= @username %> <%= @user_path %>/delayed_job.sh stop
 end script
