Add support for setting background worker environment.

--- a/templates/default/start_delayed_job.sh.erb
+++ b/templates/default/start_delayed_job.sh.erb
@@ -6,4 +6,4 @@ export QUEUE=(calculate rollup import)
 
 cd <%= @pophealth_path %>
 . <%= @rvm_path %>/scripts/rvm
-bundle exec script/delayed_job run --queue=${QUEUE[$1]}
+RAILS_ENV=<%= @rails_env %> bundle exec script/delayed_job run --queue=${QUEUE[$1]}
