Update queues to have a number assigned.

--- a/templates/default/start_delayed_job.sh.erb
+++ b/templates/default/start_delayed_job.sh.erb
@@ -6,4 +6,4 @@ export QUEUE=(calculate rollup patient_import)
 
 cd <%= @pophealth_path %>
 . <%= @rvm_path %>/scripts/rvm
-RAILS_ENV=<%= @rails_env %> bundle exec script/delayed_job run --queue=${QUEUE[$1]}
+RAILS_ENV=<%= @rails_env %> bundle exec script/delayed_job run -n$(($1+1)) --queue=${QUEUE[$1]}
