Rename incorrectly named queue in start_delayed_job.sh.

--- a/templates/default/start_delayed_job.sh.erb
+++ b/templates/default/start_delayed_job.sh.erb
@@ -2,7 +2,7 @@
 
 # This file actually starts the different workers as needed. It takes an id which is matched to the index of the QUEUE.
 
-export QUEUE=(calculate rollup patient_import)
+export QUEUE=(calculation rollup patient_import)
 
 cd <%= @pophealth_path %>
 . <%= @rvm_path %>/scripts/rvm
