--- a/templates/default/start_delayed_job.sh.erb
+++ b/templates/default/start_delayed_job.sh.erb
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-# This file actually starts the different workers as needed. It takes an id which is matched to the index of the QUEUE.
+# This file actually starts the delayed worker
 
 cd <%= @cypress_path %>
 . <%= @rvm_path %>/scripts/rvm
-RAILS_ENV=<%= @rails_env %> bundle exec script/delayed_job start -n<%= @queue_count %> --queues=<%= @queue_names %>
+bundle exec rake jobs:work RAILS_ENV=<%= @rails_env %>
