--- a/templates/default/delayed_worker_systemd.conf.erb
+++ b/templates/default/delayed_worker_systemd.conf.erb
@@ -1,5 +1,5 @@
 [Unit]
-Description=cypress delayed_worker
+Description=delayed_worker
 After=mongod.service
 Requires=mongod.service
 
@@ -8,8 +8,8 @@ Type=forking
 User=<%= @username %>
 Environment=RAILS_ENV=<%= @rails_env %>
 WorkingDirectory=<%= @rails_app_path %>
-ExecStart=<%= @rails_app_path %>/bin/delayed_job start -n 3 --pid-dir=./tmp/delayed_pids
-ExecStop=<%= @rails_app_path %>/bin/delayed_job stop --pid-dir=./tmp/delayed_pids
+ExecStart=/opt/ruby_build/builds<%= @rails_app_path %>/bin/ruby <%= @rails_app_path %>/bin/delayed_job start -n 3 --pid-dir=./tmp/delayed_pids
+ExecStop=/opt/ruby_build/builds<%= @rails_app_path %>/bin/ruby <%= @rails_app_path %>/bin/delayed_job stop -n 3 --pid-dir=./tmp/delayed_pids
 TimeoutSec=120
 
 [Install]
