Ensure that the keys are regenerated for each service before the actual process is loaded when generate_secrets_on_restart is set.

--- a/templates/default/regenerate-secrets.service.erb
+++ b/templates/default/regenerate-secrets.service.erb
@@ -1,5 +1,8 @@
 [Unit]
 Description=Regenerate Cypress and CVU secret keys
+<% @service_names.each do |service| %>
+Before=<%= service %>.service
+<% end %>
 
 [Service]
 Type=oneshot
