--- a/templates/default/delayed_worker_systemd.conf.erb
+++ b/templates/default/delayed_worker_systemd.conf.erb
@@ -1,15 +1,17 @@
 [Unit]
-Description=delayed_worker
+Description=delayed_worker_%i
 After=mongod.service
 Requires=mongod.service
 
 [Service]
-Type=forking
+Type=simple
 User=<%= @username %>
 Environment=RAILS_ENV=<%= @rails_env %>
 WorkingDirectory=<%= @rails_app_path %>
-ExecStart=/opt/ruby_build/builds<%= @rails_app_path %>/bin/ruby <%= @rails_app_path %>/bin/delayed_job start -n <%= @delayed_worker_count %> --pid-dir=./tmp/delayed_pids
-ExecStop=/opt/ruby_build/builds<%= @rails_app_path %>/bin/ruby <%= @rails_app_path %>/bin/delayed_job stop -n <%= @delayed_worker_count %> --pid-dir=./tmp/delayed_pids
+ExecStart=/opt/ruby_build/builds<%= @rails_app_path %>/bin/bundle exec rake jobs:work
+ExecStartPost=/bin/mkdir -p ./tmp/delayed_pids
+ExecStartPost=-/usr/bin/touch ./tmp/delayed_pids/delayed_job.%i.running
+ExecStopPost=/bin/rm ./tmp/delayed_pids/delayed_job.%i.running
 TimeoutSec=120
 
 [Install]
