Move over to pkgr instead of manually building the application with Chef

--- a/templates/default/regenerate-secrets.service.erb
+++ b/templates/default/regenerate-secrets.service.erb
@@ -1,13 +1,13 @@
 [Unit]
-Description=Regenerate Cypress and CVU secret keys
+Description=Regenerate <%= @service_names.join(', ') %> secret keys
 <% @service_names.each do |service| %>
 Before=<%= service %>.service
 <% end %>
 
 [Service]
 Type=oneshot
-<% @secrets_paths.each do |secret_path| %>
-ExecStart=/opt/regenerate-secrets.sh <%= secret_path %>
+<% @service_names.each do |service| %>
+ExecStart=/bin/sh -c "/usr/bin/<%= service %> config:set SECRET_KEY_BASE=$(/usr/bin/<%= service %> run rake secret)"
 <% end %>
 ExecStartPost=/bin/systemctl disable regenerate-secrets.service
 
