--- a/templates/default/nginx.conf.erb
+++ b/templates/default/nginx.conf.erb
@@ -31,7 +31,8 @@ server {
 
   error_page 500 502 503 504 /500.html;
   client_max_body_size 4G;
-  keepalive_timeout 10;
+  client_body_buffer_size 250k;
+  keepalive_timeout 15;
 }
 
 <% if @enable_secondary_app -%>
